# ai-accelerators

./: .gitignore  README.md
.github/: CODEOWNERS
advanced-experimentation/AFD/: End-to-end Automated Feature Discovery Production Workflow.config.yaml  End-to-end Automated Feature Discovery Production Workflow.ipynb  End-to-end Automated Feature Discovery Production Workflow.yaml  README.md  datasets.yaml  predicted.csv  utils.py
advanced-experimentation/Churn_app_Streamlit/: ai_accelerator_modelInsights_streamlit_v1.config.yaml  ai_accelerator_modelInsights_streamlit_v1.yaml  requirements.txt  streamlit_app.py
advanced-experimentation/DRX/: drx-overview.config.yaml  drx-overview.yaml
advanced-experimentation/Hyperparameter_Optimization/: HyperParam_Opt_Core_concepts.config.yaml  requirements.txt
advanced-experimentation/MLFLOW/: experiment_notebook.config.yaml  experiment_notebook.ipynb  orchestration_notebook.config.yaml
advanced-experimentation/MLFLOW_with_DataRobot_Experiments/: orchestration_notebook.ipynb
advanced-experimentation/Product Innovation GenAI/: Product Innovation using Generative AI and DataRobot Auto ML.ipynb  Product Innovation using Generative AI and DataRobot Auto ML.yaml
advanced-experimentation/Ready_Signal_TS/: DataRobot_RXA.config.yaml  DataRobot_RXA.ipynb
advanced-experimentation/SelfJoins/: self-joins-panel-data.config.yaml  (+1 more)
advanced_ml_and_api_approaches/: README.md
ecosystem_integration_and_workflow_templates/: Databricks_End_To_End.ipynb
ecosystem_integration_templates/: README.md
end-to-end/: Azure_End_to_End.config.yaml  Databricks_End_To_End.ipynb  GCP DataRobot End To End.config.yaml  GCP DataRobot End To End.ipynb
generative_ai/: README.md
generative_ai/adaptive-agent/core/: Taskfile.yaml  pyproject.toml  task-common.yaml
generative_ai/adaptive-agent/core/src/core/persistent_fs/: dr_file_system.py  duckdb_extension.py  kv_custom_app_implementattion.py  sqlite_extension.py
generative_ai/adaptive-agent/core/src/core/telemetry/: __init__.py  logging.py  uvicorn_filter.py
generative_ai/adaptive-agent/core/src/core/utils/: rw_lock.py
generative_ai/adaptive-agent/core/tests/: test_rw_lock.py
generative_ai/adaptive-agent/fastapi_server/: .gitignore  .licenserc.yaml  README.md  Taskfile.yaml  alembic.ini  alembic_migration.py  build-app.sh  metadata.yaml.jinja  pyproject.toml  start-app.sh
generative_ai/adaptive-agent/fastapi_server/app/: __init__.py  config.py  db.py  deps.py  main.py
generative_ai/adaptive-agent/fastapi_server/app/ag_ui/: __init__.py  base.py  dr.py  error_codes.py  storage.py  stream_manager.py  translate.py
generative_ai/adaptive-agent/fastapi_server/app/api/: __init__.py
generative_ai/adaptive-agent/fastapi_server/app/api/v1/: __init__.py  adaptive.py  auth.py  chat.py  schema.py
generative_ai/adaptive-agent/fastapi_server/app/auth/: api_key.py  ctx.py  oauth.py  session.py
generative_ai/adaptive-agent/fastapi_server/app/chats/: __init__.py
generative_ai/adaptive-agent/fastapi_server/app/messages/: __init__.py
generative_ai/adaptive-agent/fastapi_server/app/users/: auth.py  identity.py  tokens.py  user.py
generative_ai/adaptive-agent/fastapi_server/migrations/: README.md  env.py  script.py.mako
generative_ai/adaptive-agent/fastapi_server/migrations/versions/: 4d5262be920d_agui_chat_changes.py  5efc58e62518_initialize_chat_and_message.py  a9506ba8d2ab_define_initial_auth_tables.py  f57c1294b74e_change_identity_unique_constraint_to_.py
generative_ai/adaptive-agent/fastapi_server/static/: .gitignore
generative_ai/adaptive-agent/fastapi_server/static/assets/: OAuthCallback-DVEaLJuM.js
generative_ai/adaptive-agent/fastapi_server/templates/: index.html
generative_ai/adaptive-agent/fastapi_server/tests/: conftest.py  session.py  test_chat.py  test_config.py  test_deps.py  test_main.py  test_user.py
generative_ai/adaptive-agent/fastapi_server/tests/ag_ui/: test_dr.py  test_storage.py  test_stream_manager.py  test_translate.py
generative_ai/adaptive-agent/fastapi_server/tests/integration/: conftest.py  test_identity_repository.py
generative_ai/adaptive-agent/fastapi_server/tests/integration/api/: conftest.py  test_auth.py  test_chat.py
generative_ai/adaptive-agent/fastapi_server/tests/integration/auth/: test_api_key.py  test_ctx.py  test_session.py
generative_ai/adaptive-agent/fastapi_server/tests/integration/users/: test_auth.py  test_tokens.py
generative_ai/adaptive-agent/infra/: .gitignore  .licenserc.yaml  AGENTS.md  Pulumi.yaml  Taskfile.yaml  __main__.py  pyproject.toml
generative_ai/adaptive-agent/infra/configurations/: README.md
generative_ai/adaptive-agent/infra/configurations/llm/: blueprint_with_external_llm.py  blueprint_with_llm_gateway.py  deployed_llm.py  gateway_direct.py  registered_model.py
generative_ai/adaptive-agent/infra/configurations/oauth/: authlib_provider.py  datarobot_provider.py
generative_ai/adaptive-agent/infra/feature_flags/: README.md  agent.yaml  mcp_features.yaml
generative_ai/adaptive-agent/infra/infra/: __init__.py  agent.py  fastapi_server.py  frontend_web.py  libllm.py  llm.py  mcp_server.py  mcp_server_user_params.py  oauth.py
generative_ai/adaptive-agent/infra/tests/: test_agent.py
generative_ai/adaptive-agent/mcp_server/: .coveragerc  .env.template  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  README.md  Taskfile.yaml  dev.md  metadata.yaml  pyproject.toml  pytest.ini  user-metadata.yaml
generative_ai/adaptive-agent/mcp_server/app/: main.py
generative_ai/adaptive-agent/mcp_server/app/core/: server_lifecycle.py  user_config.py  user_credentials.py
generative_ai/adaptive-agent/mcp_server/app/tests/unit/: test_server_lifecycle.py
generative_ai/adaptive-agent/mcp_server/app/tools/: user_tools.py
generative_ai/adaptive-agent/mcp_server/docker/: Dockerfile  start_server.sh
generative_ai/adaptive-agent/mcp_server/docs/: custom_tools.md  deployment_info_tools.md  dynamic_tool_registration.md  mcp_client_setup.md  mcp_server_architecture.md
use_cases_and_horizontal_approaches/: README.md
(+873 files in other folders)
