[project]
name = "infra"
version = "0.0.1"
description = """
This application is a template for Generative AI agentic solutions
"""
requires-python = ">=3.11, <3.14"

dependencies = [
    "datarobot>=3.8.2",
    "datarobot-pulumi-utils>=0.1.0",
    "litellm>=1.72.1",
    "pulumi>=3.175.0",
    "pulumi-datarobot>=0.10.27",
    "jinja2>=3.1.5,<4.0",
    "pulumi-command>=1.1.3",
    "ipdb>=0.13.13",
    "rpdb>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.1.1",
    "pytest>=7.4.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.12",
]

[tool.mypy]
exclude = "configurations"
